--- a/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
+++ b/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
@@ -114,3 +114,97 @@
     align-items: center;
     margin-bottom: 10px;
 }
+
+.popup {
+    height: 300px;
+    width: 600px;
+    background-color: #b0a695;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .blur {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+  }
+
+  .popuptext {
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+
+  .btnok {
+    color: black;
+    background-color: #ebe3d5;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    width: 120px;
+    height: fit-content;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 15px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .datumRez {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .datumRez label
+  {
+    color: white;
+  }
+  
+  #datumRezP {
+    width: 60%;
+    margin-bottom: 0;
+    background-color: #776b5d;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 1.2rem;
+    user-select: none;
+  }
+  
+  .datumRezV{
+    width: 60%;
+    color: white;
+    padding: 5px;
+    font-size: 1.2rem;
+  }
+
+  select {
+    margin-bottom: 10px;
+    background-color: #776b5d;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .inputiRezervacije,
+  input {
+    width: 100%;
+    display: flex;
+    margin-bottom: 10px;
+    background-color: #776b5d;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+  }
+  
