Update reservation history and repeat reservation function

--- a/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
+++ b/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
@@ -207,4 +207,24 @@
     border-radius: 5px;
     padding: 5px;
   }
-  
+
+.move-in-row,
+.move-out-row {
+  display: flex;
+  gap: 1rem;
+}
+
+.date-select label
+{
+  color: white;
+  margin-right: 5px;
+}
+
+.date-select select {
+  background-color: #776b5d;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 5px;
+  font-size: 1.2rem;
+}
