--- a/angularApp/src/app/kategorija/kategorija.component.css
+++ b/angularApp/src/app/kategorija/kategorija.component.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     padding-bottom: 50px;
     width: 100%;
-    padding-top: 50px;
   }
   
   .containercard {
@@ -103,15 +102,23 @@
     justify-content: space-evenly;
     align-items: center;
     height: 40px;
-    margin-top: 20px;
+    margin-top: 70px;
   }
   
-  .comboboxGrad {
-    z-index: 100;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    margin-top: 20px;
+  .datumRezV{
+    width: 80%;
+    color: white;
+    padding: 5px;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-left: 10%;
+  }
+
+  select {
+    margin-bottom: 10px;
+    background-color: #776b5d;
+    border: none;
+    border-radius: 5px;
   }
   
   details {
