--- a/angularApp/src/app/kategorija/kategorija.component.html
+++ b/angularApp/src/app/kategorija/kategorija.component.html
@@ -10,11 +10,29 @@
 </head>
 
 <body>
+    <div class="filtriranje">
+            <svg (click)="getListaUsluzniObjekt()" #listaStandard id="listaStandard" xmlns="http://www.w3.org/2000/svg" style="cursor: pointer;" width="30" height="30"
+                 class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+            </svg>
+            <svg (click)="getListaProsjek()" #listaProsjek xmlns="http://www.w3.org/2000/svg" id="listaProsjek" style="cursor: pointer;" width="25" height="25"
+                 class="bi bi-star-fill" viewBox="0 0 16 16">
+                <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+            <svg *ngIf="loginInfo().isLogiran==true" (click)="getListaFavorit()" #listaFavorit xmlns="http://www.w3.org/2000/svg" id="listaFavorit" style="cursor: pointer;" width="25" height="25"
+                 class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+                <path
+                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1" />
+            </svg>
+    </div>
+    <select [(ngModel)]="odabraniGrad" (change)="getByGrad()" required class="datumRezV">
+        <option [ngValue]="null" disabled>Odaberi grad</option>
+        <option *ngFor="let grad of listaGradova" [ngValue]="grad">{{grad.naziv}}</option>
+    </select>
 <div class="container">
-    <div class="itemcard" *ngFor="let usluzniObjekt of listaUsluzniObjekt" (click)="onUsluzniObjektClick(usluzniObjekt.usluzniObjektID)">
-        <div id="srceFavorit" class="srcad">
-            <p>🤍</p>
-        </div>
+    <div class="itemcard" *ngFor="let usluzniObjekt of filtriranaListaUsluzniObjekt" (click)="onUsluzniObjektClick(usluzniObjekt.usluzniObjektID)">
         <p class="itemtitle">{{usluzniObjekt.nazivObjekta}}</p>
             <div class="itemimg" style="background-image: url({{usluzniObjekt.slika}})"></div>
         <div class="iteminfo">
